[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hxprobe"
version = "0.1.0"
description = "The 50-conformer probe: residue-resolved hydrogen-exchange opening free energies from conformational ensembles"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "hxprobe authors" }]
keywords = [
    "hydrogen-deuterium exchange",
    "protection factor",
    "conformational ensemble",
    "generative models",
    "protein dynamics",
    "free energy",
    "structural biology",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "mdtraj>=1.9",
]

[project.optional-dependencies]
# Repair + protonate raw crystal/generated structures (missing heavy atoms, no hydrogens).
fix = ["pdbfixer>=1.8", "openmm>=7.6"]
# Differentiable operator for gradient-based ensemble steering.
diff = ["torch>=1.10"]
# Development / test.
dev = ["pytest>=7", "build", "twine"]

[project.urls]
Homepage = "https://github.com/woshuizhaol/hxprobe"
Source = "https://github.com/woshuizhaol/hxprobe"
Issues = "https://github.com/woshuizhaol/hxprobe/issues"

[project.scripts]
hxprobe = "hxprobe.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hxprobe = ["data/*.pdb.gz", "data/*.csv"]
